<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <LinearLayout
      android:layout_width="280dp"
      android:layout_height="wrap_content"
      android:layout_centerInParent="true"
      android:background="@android:color/white"
      android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:text="@string/biometric_dialog_title"
        android:textColor="@android:color/black"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="24dp"
        android:text="@string/biometric_dialog_subtitle"
        android:textColor="#75000000"
        android:textSize="16sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="24dp"
        android:orientation="horizontal">

      <ImageView
          android:layout_width="54dp"
          android:layout_height="54dp"
          android:src="@drawable/ic_fingerprint"
          android:contentDescription="@string/finger"/>

      <TextView
          android:id="@+id/state_tv"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_vertical"
          android:layout_marginStart="8dp"
          android:text="@string/biometric_dialog_state_normal"
          android:textColor="#CDCED0"
          android:textSize="16sp"
          android:typeface="normal"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_gravity="end"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="24dp"
        android:orientation="horizontal">

      <TextView
          android:id="@+id/use_password_btn"
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:gravity="center"
          android:text="@string/biometric_dialog_use_password"
          android:textColor="#419BF9"
          android:textSize="14sp"/>

      <TextView
          android:id="@+id/cancel_btn"
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:layout_marginStart="14dp"
          android:gravity="center"
          android:text="@string/biometric_dialog_cancel"
          android:textColor="#419BF9"
          android:textSize="14sp"/>

    </LinearLayout>
  </LinearLayout>

</RelativeLayout>